feat: creating the controller and the route

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch --env-file=.env ./index.ts"
+    "dev": "tsx watch --env-file=.env ./src/index.ts"
   },
   "keywords": [],
   "author": "",
