--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.4",
     "prisma": "^5.20.0",
@@ -19,6 +20,7 @@
   "dependencies": {
     "@prisma/client": "^5.20.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "zod": "^3.23.8"
   }
