--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "jsonwebtoken": "^9.0.2",
     "winston": "^3.14.2",
     "zod": "^3.23.8"
   }
