--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "test": "vitest",
     "dev": "tsx watch --env-file=.env ./src/index.ts"
   },
   "keywords": [],
@@ -15,7 +16,8 @@
     "@types/node": "^22.7.4",
     "prisma": "^5.20.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitest": "^2.1.2"
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
