--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.4",
     "prisma": "^5.20.0",
     "tsx": "^4.19.1",
@@ -28,7 +29,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
-    "winston": "^3.14.2",
+    "morgan": "^1.10.0",
     "zod": "^3.23.8"
   }
 }
