--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "dev": "tsx watch --env-file=.env ./src/index.ts"
+    "start": "tsx watch --env-file=.env ./src/index.ts"
   },
   "keywords": [],
   "author": "",
