--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "test": "vitest",
-    "start": "tsx watch --env-file=.env ./src/index.ts"
+    "dev": "tsx watch --env-file=.env ./src/index.ts",
+    "build": "npx tsc",
+    "start": "node ./dist/index.js"
   },
   "keywords": [],
   "author": "",
